--- a/package.json
+++ b/package.json
@@ -95,23 +95,14 @@
     }
   },
   "dependencies": {
-    "@syncfusion/ej2": "^21.1.40",
-    "@syncfusion/ej2-react-calendars": "^21.1.38",
-    "@syncfusion/ej2-react-charts": "^21.1.39",
-    "@syncfusion/ej2-react-dropdowns": "^21.1.39",
-    "@syncfusion/ej2-react-grids": "^21.1.39",
-    "@syncfusion/ej2-react-inputs": "^21.1.39",
-    "@syncfusion/ej2-react-kanban": "^21.1.39",
-    "@syncfusion/ej2-react-popups": "^21.1.37",
-    "@syncfusion/ej2-react-richtexteditor": "^21.1.39",
-    "@syncfusion/ej2-react-schedule": "^21.1.39",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "recharts": "^2.5.0"
   },
   "devDependencies": {
     "@electron/notarize": "^1.2.3",
