--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "test": "jest"
   },
   "browserslist": [],
+  "browser": {
+    "child_process": false
+  },
   "prettier": {
     "singleQuote": true,
     "overrides": [
@@ -95,9 +98,15 @@
     }
   },
   "dependencies": {
+    "child_process": "^1.0.2",
+    "chokidar": "^3.5.3",
+    "drag-drop": "^7.2.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
+    "fs-extra": "^11.1.1",
+    "node": "^19.8.1",
+    "open": "^9.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
