--- a/package.json
+++ b/package.json
@@ -98,18 +98,22 @@
     }
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/pickers": "^3.3.10",
+    "@mui/lab": "^5.0.0-alpha.127",
+    "@mui/x-data-grid-pro": "^6.2.0",
+    "@mui/x-date-pickers": "^6.2.0",
     "child_process": "^1.0.2",
     "chokidar": "^3.5.3",
-    "drag-drop": "^7.2.0",
+    "date-fns": "^2.29.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
-    "fs-extra": "^11.1.1",
-    "node": "^19.8.1",
-    "open": "^9.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-rainbow-components": "^1.32.0",
     "react-router-dom": "^6.8.1",
     "recharts": "^2.5.0"
   },
@@ -123,12 +127,8 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@reduxjs/toolkit": "^1.8.6",
     "@svgr/webpack": "^6.5.1",
-    "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^29.4.0",
-    "@types/node": "18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-test-renderer": "^18.0.0",
@@ -137,7 +137,6 @@
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "browserslist-config-erb": "^0.0.3",
-    "chalk": "^4.1.2",
     "concurrently": "^7.6.0",
     "core-js": "^3.27.2",
     "cross-env": "^7.0.3",
@@ -169,7 +168,7 @@
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.4",
+    "react-redux": "^8.0.5",
     "react-refresh": "^0.14.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
