--- a/package.json
+++ b/package.json
@@ -99,13 +99,8 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/pickers": "^3.3.10",
-    "@mui/lab": "^5.0.0-alpha.127",
-    "@mui/x-data-grid-pro": "^6.2.0",
-    "@mui/x-date-pickers": "^6.2.0",
-    "child_process": "^1.0.2",
-    "chokidar": "^3.5.3",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.12",
     "date-fns": "^2.29.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
@@ -122,8 +117,6 @@
     "@electron/rebuild": "^3.2.10",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.12",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@reduxjs/toolkit": "^1.8.6",
     "@svgr/webpack": "^6.5.1",
@@ -136,6 +129,7 @@
     "@types/webpack-bundle-analyzer": "^4.6.0",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
+    "autoprefixer": "^10.4.14",
     "browserslist-config-erb": "^0.0.3",
     "concurrently": "^7.6.0",
     "core-js": "^3.27.2",
@@ -165,6 +159,8 @@
     "jest": "^29.4.2",
     "jest-environment-jsdom": "^29.4.2",
     "mini-css-extract-plugin": "^2.7.2",
+    "postcss": "^8.4.23",
+    "postcss-loader": "^7.2.4",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -177,6 +173,7 @@
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.3.2",
     "terser-webpack-plugin": "^5.3.6",
     "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
