--- a/package.json
+++ b/package.json
@@ -101,6 +101,16 @@
     "@date-io/date-fns": "^1.3.13",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
+    "@syncfusion/ej2": "^21.1.41",
+    "@syncfusion/ej2-react-calendars": "^21.1.41",
+    "@syncfusion/ej2-react-charts": "^21.1.41",
+    "@syncfusion/ej2-react-dropdowns": "^21.1.41",
+    "@syncfusion/ej2-react-grids": "^21.1.41",
+    "@syncfusion/ej2-react-inputs": "^21.1.39",
+    "@syncfusion/ej2-react-kanban": "^21.1.39",
+    "@syncfusion/ej2-react-popups": "^21.1.41",
+    "@syncfusion/ej2-react-richtexteditor": "^21.1.41",
+    "@syncfusion/ej2-react-schedule": "^21.1.41",
     "date-fns": "^2.29.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
