--- a/package.json
+++ b/package.json
@@ -101,27 +101,39 @@
     "@date-io/date-fns": "^1.3.13",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
+    "@radix-ui/react-scroll-area": "^1.0.4",
     "@syncfusion/ej2": "^21.1.41",
+    "@syncfusion/ej2-react-buttons": "^21.2.6",
     "@syncfusion/ej2-react-calendars": "^21.1.41",
     "@syncfusion/ej2-react-charts": "^21.1.41",
     "@syncfusion/ej2-react-dropdowns": "^21.1.41",
     "@syncfusion/ej2-react-grids": "^21.1.41",
+    "@syncfusion/ej2-react-inplace-editor": "^21.2.3",
     "@syncfusion/ej2-react-inputs": "^21.1.39",
     "@syncfusion/ej2-react-kanban": "^21.1.39",
+    "@syncfusion/ej2-react-navigations": "^21.2.8",
+    "@syncfusion/ej2-react-notifications": "^21.2.3",
     "@syncfusion/ej2-react-popups": "^21.1.41",
     "@syncfusion/ej2-react-richtexteditor": "^21.1.41",
     "@syncfusion/ej2-react-schedule": "^21.1.41",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
+    "lib-utils-ts": "^2.0.4-stable",
+    "lucide-react": "^0.233.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-rainbow-components": "^1.32.0",
     "react-router-dom": "^6.8.1",
     "react-svg": "^16.1.9",
-    "recharts": "^2.5.0"
+    "recharts": "^2.5.0",
+    "tailwind-merge": "^1.13.0",
+    "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
     "@electron/notarize": "^1.2.3",
