Refactor Redux store for better organization
- Added sidebar reducer and actions
- Implemented responsive behavior for the sidebar
- Completed the 'figures' section with a responsive grid layout
  - Large screens display 3 figures per row
  - Medium screens display 2 figures per row
  - Small screens display 1 figure per row with uniform card sizing
- Planning to introduce API result caching for improved loading performance
- Outlined future features:
  1. Focus Figure: Enhance figure display on click
  2. Create Figure: Implement figure creation functionality
  3. Delete Figure: Add figure deletion with confirmation and trash storage

--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "main": "index.ts",
   "type": "module",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
