--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "type": "module",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "clipboardy": "^3.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
