feat: Add ability to delete figure. feat: Add ability to zoom in figure.

--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "@syncfusion/ej2-react-richtexteditor": "^21.1.41",
     "@syncfusion/ej2-react-schedule": "^21.1.41",
     "axios": "^1.5.0",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
@@ -149,8 +150,10 @@
     "@svgr/webpack": "^6.5.1",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/body-scroll-lock": "^3.1.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-modal": "^3.16.0",
     "@types/react-test-renderer": "^18.0.0",
     "@types/terser-webpack-plugin": "^5.0.4",
     "@types/webpack-bundle-analyzer": "^4.6.0",
