--- a/server/package.json
+++ b/server/package.json
@@ -23,10 +23,12 @@
     "clipboardy": "^3.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "glob": "^10.3.4",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.1",
     "typescript-language-server": "^3.3.2",
+    "util": "^0.12.5",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
