--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.1",
+    "strftime": "^0.10.2",
     "typescript-language-server": "^3.3.2",
     "util": "^0.12.5",
     "yamljs": "^0.3.0"
