--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Server side manager for my memory trainer.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "bun index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
