--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-rainbow-components": "^1.32.0",
     "react-router-dom": "^6.8.1",
+    "react-select": "^5.8.0",
     "react-svg": "^16.1.9",
     "recharts": "^2.5.0",
     "stream-http": "^3.2.0",
