--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,7 @@ yarn-error.log*
 node_modules/
 jspm_packages/
 package-lock.json
+server/package-lock.json
 
 # Optional npm cache directory
 .npm
